# Beep-Me-backend

./: .gitignore  README.md  createsuperuser.py  manage.py  pyproject.toml  requirements.txt  scripts.py
BeepMe/: asgi.py  cache.py  celery.py  home.py  settings.py  storage.py  storage_backend.py  urls.py  utils.py  wsgi.py
authentication/: adapters.py  serializers.py  services.py  tasks.py  urls.py  utils.py  views.py
chat/: apps.py  models.py  urls.py  views.py
chat_room/: models.py  pagination.py  parsers.py  permissions.py  queries.py  serializers.py  services.py  tasks.py  urls.py  views.py
chat_room/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_alter_chatroom_group.py  0004_rename_last_read_message_at_memberdetail_last_active_at.py  0005_chatroom_created_at.py  0006_chatroom_last_message.py  0007_alter_chatroom_created_at_and_more.py  0008_chatroom_last_room_activity.py  0009_callhistory.py  0010_callhistory_status.py  0011_remove_callhistory_chat_room_c_room_id_61c7ef_idx_and_more.py  (+1 more)
chatsocket/: consumers.py  middleware.py  queries.py  routing.py
group/: admin.py  apps.py  models.py  permissions.py  queries.py  serializers.py  signals.py  urls.py  utils.py  views.py
home/: urls.py  views.py
message/: models.py  serializers.py
messages/: models.py
notification/: models.py  serializers.py  services.py  tasks.py  views.py
upload/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
user/: models.py  queries.py  serializers.py  signals.py  urls.py  views.py
(+47 files in other folders)
